--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav{
 
 footer{
         background-color: rgb(177, 174, 174);
-        position: relative;
+        position: static;
         bottom: 0;
         width: 100%;
         height: 40px;
