--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,8 @@ footer{
         width: 100%;
         height: 40px;
         color: white;
-    }
+}
+
+.divError{
+    background-color: white;
+}
