--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -42,11 +42,7 @@ footer{
     text-align: center;
     background-color: white;
 }
-.divagrbook{
-    margin-left: 270px;
-    margin-right: 15px;
-}
-.pareditbook, .paragrbook{
+.pareditbook, .paragrbook, .paragrauth{
     background-color: teal;
     font-size: 22px;
     color: white;
