--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -5,35 +5,32 @@ nav{
     background-color: rgb(155, 57, 73);
     margin-bottom: 50px;
 }
-
+.datosUsuarioNav{
+    margin-top: 7px;
+    margin-right: 7px;
+}
 .tabLisAutores{
     text-align: center;
 }
-
 .titTabla{
     background-color: rgba(116, 35, 35, 0.329);
 }
-
 .autores{
     color: rgb(194, 194, 44);
     text-transform: uppercase;
     text-align: center;
     font-size: 20px;
 }
-
 .infoLibro{
     background-color: rgb(177, 174, 174);
 }
-
 .fotoLibro{
     margin-top: 100px;
     background-color: rgb(110, 104, 10);
 }
-
 .titFotLib{
     color: rgb(167, 154, 154);
 }
-
 footer{
     background-color: rgb(177, 174, 174);
     position: static;
@@ -42,7 +39,6 @@ footer{
     height: 40px;
     color: white;
 }
-
 .divError{
     background-color: white;
 }
@@ -50,35 +46,31 @@ footer{
     text-align: center;
     background-color: white;
 }
-.divagrbook{
-    margin-left: 270px;
-    margin-right: 15px;
-}
-
-.pareditbook, .paragrbook{
+.pareditbook, .paragrbook, .paragrauth, .pareditauth{
     background-color: teal;
     font-size: 22px;
     color: white;
 }
-.formAgregar{
+.titAgreLib, .titAgreAut{
+    text-align: center;
+}
+.formAgregar, .libAgregado, .autAgregado{
     background-color: teal;
 }
-.btnGuardarNuevoLib{
-    text-align: end;
-    margin-top: 5px;
-    background-color: rgb(192, 178, 178);
+.agrNomNuevo{
+    margin-left: 95px;
 }
-.divBorrLib{
+.btnGuardarNuevoLib, .btnGuardarCambios, .btnGuardarNuevo{
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-bottom: 10px;
+    border-color: teal;
+    border-style: solid ;
+}
+.divBorrLib, .divBorrAut{
     text-align: center;
     background-color: mediumspringgreen;
 }
 .btnVolverBorr:hover{
     background-color: rgba(243, 0, 0, 0.74);
-}
-.headerUsuario{
-    text-align: center;
-    background-color: cadetblue;
-}
-.btnLeido:hover{
-    background-color: blue;
 }
