--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -36,8 +36,17 @@ footer{
     position: static;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 100%;
     color: white;
+}
+.footer{
+    text-align: center;
+}
+.nombreusuario{
+    color: rgb(56, 9, 9);
+}
+.nombreusuario:hover{
+    color: rgb(189, 90, 9);
 }
 .divError{
     background-color: white;
