--- a/css/stylePublic.css
+++ b/css/stylePublic.css
@@ -38,8 +38,11 @@ footer{
     position: static;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 100%;
     color: white;
+}
+.footer{
+    text-align: center;
 }
 
 .divError{
