Reparo bug que imagen no se veía

--- a/css/stylePublic.css
+++ b/css/stylePublic.css
@@ -24,8 +24,17 @@ nav{
     background-color: rgb(177, 174, 174);
 }
 
+.tapaLibro{
+    width: 100%;
+    height: 100%;
+}
+
 .fotoLibro{
-    margin-top: 100px;
+    margin-top: 5%;
+    margin-left: 8%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 100%;
     background-color: rgb(110, 104, 10);
 }
 
