--- a/css/stylePublic.css
+++ b/css/stylePublic.css
@@ -80,3 +80,19 @@ footer{
     margin-top: 5px;
     background-color: rgb(192, 178, 178);
 }
+#comentarioLib{
+    background-color: rosybrown;
+    margin-right: 0;
+    width: 90%;
+    height: 50px;
+}
+.comentarioLibDiv{
+    margin-top: 15px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.btnComLib{
+    height: 50px;
+    width: 50px;
+    margin-bottom: 5px;
+}
